fix (psql): fix query executing errors caused by PSQL QuerySet closing initiated by lazy executing.
feat (psql): introduce batching of requests needed to calculate organizations' rating